tools/tests/errors/surf_type_13.experr
can only repeat List by an Integer
